--- a/improvement.Rmd
+++ b/improvement.Rmd
@@ -1,5 +1,18 @@
 ## Possible improvements:
 
+### Frontend side:
+ - change .label in editor render()
+ - Implement Rippler events, as they do not seems to be functioning as expected
+ - In editor generate the preset programatically with a loop or a .map
+ - Fix styles (Currently is too wide)
+ - I would like to avoid to have to record the avaiable remotes in each card configuration. Maybe save in the frontend object
+ - Implement a "permanent" and a "quick" learning mode using a long vs a short press
+ - Implement longpress, so each remote has x2 the number of options
+ - Add a default option to the input_select in the editor
+ - stylize the Discoverbroalink ha-card
+
+### Backend side:
+
  - Allow the devices in backend to be registered as proper entities (just for remote or for a selection of devices)
  - Improve presets (allow the creation of new presets with custom names)
  - Save avaialble device data in the frontend object and not in the card configuration
