--- a/improvement.Rmd
+++ b/improvement.Rmd
@@ -9,10 +9,16 @@
  - Implement longpress, so each remote has x2 the number of options
  - Add a default option to the input_select in the editor
  - stylize the Discoverbroalink ha-card
+  - Implement other remote types (and tie them to the presest)
 
 ### Backend side:
 
  - Allow the devices in backend to be registered as proper entities (just for remote or for a selection of devices)
  - Improve presets (allow the creation of new presets with custom names)
  - Save avaialble device data in the frontend object and not in the card configuration
- - Implement other button types (and tie them to the presest)
+ - Improve error Handling
+ - Type-hinting
+ - Handle notification -> Other than the persistant notifications
+ - The card in the frontend should not render until the discovery process is done.
+ - Test suite? check broadlink integration
+ - How to handle a locked broadlink?
