updated TODO list

--- a/improvement.Rmd
+++ b/improvement.Rmd
@@ -3,17 +3,17 @@
 ### Frontend side:
  - Add presets changer to the side of remote instead to the editor card
  - Implement a visual effect when the broadlinks are being searched
+ - Add images to README.rmd
  - In editor generate the preset programatically with a loop or a .map
  - I would like to avoid to have to record the avaiable remotes in each card configuration. Maybe save in the frontend object
- - Implement a "permanent" and a "quick" learning mode using a long vs a short press
- - Implement longpress, so each remote has x2 the number of options
  - Add a default option to the input_select in the editor
  - stylize the Discoverbroalink ha-card
  - Implement other remote types (and tie them to the presest)
  - Handle visual indicator that a button is being learned (like a shake when the user tries to get out of learning mode or when it tries learn other command)
+ - Implement longpress, so each remote has x2 the number of options
+
 
 ### Backend side:
-
  - Allow the devices in backend to be registered as proper entities (just for remote or for a selection of devices)
  - Improve presets (allow the creation of new presets with custom names?)
  - Save avaialble device data in the frontend object and not in the card configuration
