Updated TODO list and changed priorities

--- a/improvement.Rmd
+++ b/improvement.Rmd
@@ -1,19 +1,17 @@
 ## Possible improvements:
 
 ### Frontend side:
- - Improve shouldUpdate in editor
- - Handle visual indicator that a button is being learned (like a shake when the user tries to get out of learning mode or when it tries learn other command)
  - Add images to README.rmd
- - In editor generate the preset programatically with a loop or a .map
  - I would like to avoid to have to record the avaiable remotes in each card configuration. Maybe save in the frontend object
+ - Handle visual indicator that a button is being learned (like a shake when the user tries to get out of learning mode or when it tries learn other command)
  - Add a default option to the input_select in the editor
  - stylize the Discoverbroalink ha-card
+ - Improve shouldUpdate in editor
  - Implement other remote types (and tie them to the presest)
  - Implement longpress, so each remote has x2 the number of options
-  - Add presets changer to the side of remote instead to the editor card (requires to update configuration from the broadlink code, which does not seem trivial)
 
 ### Backend side:
- - Imrpove error handling when discovering devices
+ - Improve error handling when discovering devices
  - Improve presets (Associate a card type to a preset)
  - Allow the devices in backend to be registered as proper entities (just for remote or for a selection of devices)
  - Save avaialble device data in the frontend object and not in the card configuration
