--- a/improvement.Rmd
+++ b/improvement.Rmd
@@ -6,10 +6,7 @@
 
 
 ### Backend side:
- - Allow the devices in backend to be registered as proper entities (just for remote or for a selection of devices)
- - Improve presets (Associate a card type to a preset)
- - Save avaialble device data in the frontend object and not in the card configuration
- - Improve error Handling
+ - Allow the devices in backend to be registered as proper entities (just for remote or for a selection of devices) > not sure if homeassistant suports this
  - Type-hinting
  - The card in the frontend should not render until the discovery process is done.
  - Test suite? check broadlink integration
