Fixed the editor in the broadlink custom card

--- a/improvement.Rmd
+++ b/improvement.Rmd
@@ -1,6 +1,9 @@
 ## Possible improvements:
 
 ### Frontend side:
+ - FIX CSS in the card (color + space between the discover button and the other options)
+ - check remote-card todo list
+ - Add an option to alter theme in the GUI
  - I would like to avoid to have to record the avaiable remotes in each card configuration. Maybe save in the frontend object
  - Improve shouldUpdate in editor
 
