--- a/src/localize/languages/de.json
+++ b/src/localize/languages/de.json
@@ -7,7 +7,7 @@
       "save": "Speichern"
     },
     "info": {
-      "card_name": "Broadlink-Befehlskarte",
+      "card_name": "Broadlink",
       "description": "Ein Brief an Broadlink Universal Commands"
     },
     "editor": {
