--- a/src/localize/languages/es.json
+++ b/src/localize/languages/es.json
@@ -7,7 +7,7 @@
       "save": "Salvar"
     },
     "info":{
-      "card_name": "Tarjeta remota Broadlink",
+      "card_name": "Broadlink",
       "description": "Una tarjeta remota para controles remotos universales de enlace amplio"
     },
     "editor": {
