--- a/src/localize/languages/fr.json
+++ b/src/localize/languages/fr.json
@@ -7,7 +7,7 @@
       "save": "Sauver"
     },
     "info":{
-      "card_name": "Carte à distance Broadlink",
+      "card_name": "Broadlink",
       "description": "Une carte à distance pour les télécommandes universelles broadlink"
     },
     "editor": {
