--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -7,7 +7,7 @@
       "save": "Salva"
     },
     "info":{
-      "card_name": "Scheda remota Broadlink",
+      "card_name": "Broadlink",
       "description": "Una scheda remota per telecomandi universali Broadlink"
     },
     "editor": {
