--- a/src/localize/languages/pt.json
+++ b/src/localize/languages/pt.json
@@ -7,7 +7,7 @@
     "save": "Guardar"
   },
   "info": {
-    "card_name": "Carta Comandos da Broadlink",
+    "card_name": "Broadlink",
     "description": "Uma carta para os comandos universais da broadlink"
   },
   "editor": {
